--- a/Курс 3/VPHAMI/Lab 1/CalcFigure/mainwindow.ui
+++ b/Курс 3/VPHAMI/Lab 1/CalcFigure/mainwindow.ui
@@ -14,17 +14,48 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget"/>
+  <widget class="QStatusBar" name="statusbar"/>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>22</height>
+     <height>23</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <widget class="QMenu" name="menu">
+    <property name="title">
+     <string>Меню</string>
+    </property>
+    <addaction name="menu_1"/>
+    <addaction name="separator"/>
+    <addaction name="menu_2"/>
+    <addaction name="separator"/>
+    <addaction name="menu_3"/>
+   </widget>
+   <addaction name="menu"/>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
+  <action name="menu_1">
+   <property name="text">
+    <string>Авторы</string>
+   </property>
+  </action>
+  <action name="menu_2">
+   <property name="text">
+    <string>Очистить</string>
+   </property>
+  </action>
+  <action name="menu_3">
+   <property name="text">
+    <string>Выход</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
